@@ -129,17 +129,19 @@ class Pagination
     public function pagination()
     {
         $pageCount = ceil($this->totalItems / $this->itemPerPage);
-        $current_range = [($this->current - 2 < 1 ? 1 : $this->current - 2), ($this->current + 2 > $pageCount ? $pageCount : $this->current + 2)];
-        $first_page = $this->current > 5 ? '<li><a href="'.$this->baseUrl.$this->urlAppend.'1'.'">'.printl('first:page:pagination').'</a></li>'.($this->current < 5 ? ', ' : ' <li><a href="#!" class="disable" disabled >...</a></li> ') : null;
-        $last_page = $this->current < $pageCount - 2 ? ($this->current > $pageCount - 4 ? ', ' : ' <li><a href="#!" class="disable" disabled >...</a></li>  ').'<li><a href="'.$this->baseUrl.$this->urlAppend.$pageCount.'">'.printl('last:page:pagination').'</a></li>' : null;
-        $previous_page = $this->current > 1 ? '<li><a href="'.$this->baseUrl.$this->urlAppend.($this->current - 1).'">Previous</a></li> | ' : null;
-        $next_page = $this->current < $pageCount ? ' | <li><a href="'.$this->baseUrl.$this->urlAppend.($this->current + 1).'">Next</a></li>' : null;
-        for ($x = $current_range[0]; $x <= $current_range[1]; $x++) {
-            $pages[] = '<li><a href="'.$this->baseUrl.$this->urlAppend.$x.'" '.($x == $this->current ? 'class="active"' : '').'>'.$x.'</a></li>';
-        }
-        if ($pageCount > 1) {
-            return '<ul class="pagination"> '.$previous_page.$first_page.implode(', ', $pages).$last_page.$next_page.'</ul>';
-        }
+		if ($this->current >= 1 && $this->current <= $pageCount){
+			$current_range = [($this->current - 2 < 1 ? 1 : $this->current - 2), ($this->current + 2 > $pageCount ? $pageCount : $this->current + 2)];
+			$first_page = $this->current > 5 ? '<li><a href="'.$this->baseUrl.$this->urlAppend.'1'.'">'.printl('first:page:pagination').'</a></li>'.($this->current < 5 ? ', ' : ' <li><a href="#!" class="disable" disabled >...</a></li> ') : null;
+			$last_page = $this->current < $pageCount - 2 ? ($this->current > $pageCount - 4 ? ', ' : ' <li><a href="#!" class="disable" disabled >...</a></li>  ').'<li><a href="'.$this->baseUrl.$this->urlAppend.$pageCount.'">'.printl('last:page:pagination').'</a></li>' : null;
+			$previous_page = $this->current > 1 ? '<li><a href="'.$this->baseUrl.$this->urlAppend.($this->current - 1).'">Previous</a></li> | ' : null;
+			$next_page = $this->current < $pageCount ? ' | <li><a href="'.$this->baseUrl.$this->urlAppend.($this->current + 1).'">Next</a></li>' : null;
+			for ($x = $current_range[0]; $x <= $current_range[1]; $x++) {
+				$pages[] = '<li><a href="'.$this->baseUrl.$this->urlAppend.$x.'" '.($x == $this->current ? 'class="active"' : '').'>'.$x.'</a></li>';
+			}
+			if ($pageCount > 1) {
+				return '<ul class="pagination"> '.$previous_page.$first_page.implode(', ', $pages).$last_page.$next_page.'</ul>';
+			}			
+		}
     }
 
     /**
