@@ -46,3 +46,4 @@ Changes:
 38. Update FileHandling class fix logical mistake.
 39. Added two functions in helper.php (read and write file).
 40. Added pagination class and pagination function.
+41. Update Pagination class fix logical mistake.
